crates/fig-lexer/tests/snapshots/integration_tests__comments__single_line.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: main
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "42"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
